@@ -1,6 +1,7 @@
 #include <QtGui/QApplication>
 #include <QtDeclarative/QDeclarativeView>
 #include <QtDeclarative/QDeclarativeContext>
+#include <QtDeclarative/QDeclarativeEngine>
 #include "ccfconfig.h"
 
 int main(int argc, char *argv[])
@@ -8,12 +9,12 @@ int main(int argc, char *argv[])
     QApplication a(argc, argv);
     QDeclarativeView *viewer = new QDeclarativeView();
 
-    CcfConfig *configuration = new CcfConfig("config");
+    CcfConfig *configuration = new CcfConfig("config", viewer);
     if (configuration->isErrorState()) {
         printf("Error while reading configuration file! Message: "
                + configuration->errorMessage().toLocal8Bit() + "\n");
         printf("Loading default configuration... ");
-        configuration = new CcfConfig("config_default");
+        configuration = new CcfConfig("config_default", viewer);
 
         if (configuration->isErrorState()) {
             printf("ERROR: " + configuration->errorMessage().toLocal8Bit() + "\n");
@@ -33,6 +34,8 @@ int main(int argc, char *argv[])
     viewer->viewport()->setAttribute(Qt::WA_OpaquePaintEvent);
     viewer->viewport()->setAttribute(Qt::WA_NoSystemBackground);
     QObject::connect(viewer, SIGNAL(sceneResized(QSize)), configuration, SLOT(windowResized(QSize)));
+//    QDeclarativeEngine engine = viewer->engine();
+    QObject::connect(viewer->engine(), SIGNAL(quit()), qApp, SLOT(quit()));
 
     viewer->show();
     return a.exec();
